# single-cell-rnaseq-analysis-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_pipeline.py
output/processed/: cluster_summary.tsv  marker_genes.tsv
output/reports/: analysis_summary.md
src/single_cell_pipeline/: analysis.py  data.py  pipeline.py
tests/: test_analysis.py
