[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "single-cell-scrnaseq-pipeline"
version = "0.1.0"
description = "End-to-end single-cell RNA-seq analysis pipeline using a real public 10x dataset."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Pankti Patel"}
]
dependencies = [
  "scanpy>=1.10",
  "anndata>=0.10",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "h5py>=3.10",
  "networkx>=3.0",
  "igraph>=0.11",
  "leidenalg>=0.10"
]

[project.scripts]
single-cell-pipeline = "single_cell_pipeline.pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

